# debutizer

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  LICENSE.spdx  README.md  constraints.txt  debutizer-prod.yaml  debutizer-stage.yaml  debutizer.key  debutizer.yaml  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yaml  prod-release.yaml  release.yaml  staging-release.yaml  test.yaml
debutizer/: __main__.py  _containers.py  _license_full_text.py  _list_backed_container.py  binary_paragraph.py  changelog.py  compat.py  conffiles.py  configuration.py  control.py  copyright.py  deb822_schema.py  deb822_utils.py  dirs.py  environment.py  errors.py  package_py.py  print_utils.py  registry.py  relation.py  source_package.py  source_paragraph.py  subprocess_utils.py  translate.py  upstreams.py  version.py
debutizer/commands/: __init__.py  artifacts.py  build.py  check.py  command.py  config_file.py  configuration.py  configuration_file.py  env_argparse.py  local_repo.py  root.py  source.py  upload.py  utils.py  version.py
debutizer/upstreams/: __init__.py  base.py  git.py  local.py  null.py  source_package.py  source_repository.py
docs/: conf.py  configuration_file.rst  index.rst
docs/_static/: custom.css
locale/: build_command.pot  portal.pot
pkg/dive/: debutizer.yaml
scripts/: update_translations.sh
tests/integration/: test_upstreams.py
tests/unit/: test_changelog.py  test_cleanup_hooks.py  test_configuration.py  test_copyright.py  test_dirs.py  test_registry.py  test_relation.py  test_version.py
(+53 files in other folders)
